--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@codegenie/serverless-express": "^4.13.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "aws-serverless-express": "^3.3.5",
     "@nestjs/platform-express": "^10.0.0",
     "aws-lambda": "^1.0.7",
     "reflect-metadata": "^0.2.0",
